[project]
name = "NetworkAttachedMouse"
version = "0.99.9"
requires-python = ">=3.14"
dependencies = [
    "pynput>=1.8.2",
    "pyserial>=3.5",
    "pyserial-asyncio>=0.6",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.20",
]

build = [
    "poethepoet==0.46.0",
    "pyinstaller==6.21.0",
]

[tool.uv]
package = true

[tool.poe.tasks]
build = """
    pyinstaller
    --collect-submodules serial
    --onefile
    --name=NetMouse
    main.py
"""
